<resources>
    <string name="app_name">DTire</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_dtire">Welcome to DTire!</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_us">Join Us!</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="have_a_good_day">Have a good day!</string>
    <string name="your_location">Your Location</string>
    <string name="refresh">Refresh</string>
    <string name="our_features">Our Features</string>
    <string name="home_camera_icon">Home Camera Icon</string>
    <string name="scan_your_tire">Scan Your Tire</string>
    <string name="to_see_the_condition_of_your_tire">To see the condition of your tire</string>
    <string name="home_map_icon">Home Map Icon</string>
    <string name="nearest_repair_shop">Nearest Repair shop</string>
    <string name="quickly_find_nearest_repair_shop_for_your_tire">Quickly find nearest repair shop for your tire</string>
    <string name="home_history_icon">Home History Icon</string>
    <string name="history">History</string>
    <string name="history_message">Review the activities you have done with us</string>
    <string name="choose">Choose</string>
    <string name="gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="detection_history">Detection History</string>
    <string name="history_image">History Image</string>
    <string name="right_arrow_icon">Right arrow icon</string>
    <string name="title_of_the_condition">Title of the condition</string>
    <string name="_01_01_2022">01/01/2022</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="empty_string">-</string>
    <string name="user_name">User\'s name</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loading">Loading&#8230;</string>
    <string name="hi_user">Hi, User!</string>
    <string name="no_empty_email">Email cannot be empty</string>
    <string name="use_email_format">Please use email format</string>
    <string name="no_empty_password">Password cannot be empty</string>
    <string name="minimum_password_length">Password minimum contain 8 characters</string>
    <string name="no_empty_name">Name cannot be empty</string>
    <string name="confirm_your_password">Please confirm your password</string>
    <string name="password_not_match">Password didn\'t match</string>
    <string name="user_greeting">Hi, %s!</string>
    <string name="no_connection">No Connection</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="detail">Detail</string>
    <string name="call">Call</string>
    <string name="result_crack">Our system detects the test results from your tire image as a crack / leak, we recommend you to immediately repair your tire through the tire patch feature.</string>
    <string name="result_ok">Our system detects the test result from your tire image as OK and is still good.</string>
    <string name="crack">Cracked</string>
    <string name="ok">Normal</string>
    <string name="back">Back</string>
    <string name="map_distance">%s km</string>
    <string name="open_maps">Open Maps</string>
</resources>