<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardPreventCornerOverlap="true"
    android:layout_gravity="center"
    android:background="@color/transparent"
    app:cardElevation="0dp"
    android:elevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="?attr/colorSecondaryVariant">

        <ImageView
            android:id="@+id/iv_history_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/history_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_history_item"
            app:layout_constraintStart_toEndOf="@+id/iv_history_item"
            app:layout_constraintTop_toTopOf="@+id/iv_history_item">

            <TextView
                android:id="@+id/tv_history_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                android:text="@string/title_of_the_condition" />

            <TextView
                android:id="@+id/tv_history_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_01_01_2022" />
        </LinearLayout>

        <ImageView
            android:id="@+id/right_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_history_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_history_item"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:tint="?attr/colorOnPrimary"
            android:contentDescription="@string/right_arrow_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>