<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:logo="@drawable/ic_dtirelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_home">
            <!--        android:foreground="?attr/selectableItemBackground"-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_home_profile_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/person1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_profile_photo"
                app:layout_constraintStart_toEndOf="@+id/iv_home_profile_photo"
                app:layout_constraintTop_toTopOf="@+id/iv_home_profile_photo">

                <TextView
                    android:id="@+id/tv_home_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_user"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="217dp"
                    tools:layout_editor_absoluteY="153dp" />

                <TextView
                    android:id="@+id/tv_home_greeting2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_a_good_day"
                    tools:layout_editor_absoluteX="216dp"
                    tools:layout_editor_absoluteY="217dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_home_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/primary_green"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_profile">

            <TextView
                android:id="@+id/tv_home_location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_location"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_home_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_home_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/refresh_button_bg"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="3dp"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_features"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_location" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_to_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/secondary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_title"
            >

            <ImageView
                android:id="@+id/iv_home_camera"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/home_camera_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_camera"
                app:layout_constraintStart_toEndOf="@+id/iv_home_camera"
                app:layout_constraintTop_toTopOf="@+id/iv_home_camera">

                <TextView
                    android:id="@+id/tv_home_scan_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_your_tire"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_home_scan_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/to_see_the_condition_of_your_tire" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_to_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/secondary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_to_camera">

            <ImageView
                android:id="@+id/iv_home_map"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_map_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/home_map_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_home_map"
                app:layout_constraintTop_toTopOf="@+id/iv_home_map">

                <TextView
                    android:id="@+id/tv_home_map_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nearest_repair_shop"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_home_map_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/quickly_find_nearest_repair_shop_for_your_tire" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home_to_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/secondary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_home_to_map">

            <ImageView
                android:id="@+id/iv_home_history"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_history_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/home_history_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_home_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_home_history"
                app:layout_constraintTop_toTopOf="@+id/iv_home_history">

                <TextView
                    android:id="@+id/tv_home_history_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_home_history_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/history_message" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/background_ripple"
        tools:layout_editor_absoluteY="19dp">

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_connection"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refresh_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>