<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="248dp"
                android:layout_height="108dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.564"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dtirelogo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_login_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_dtire"
                android:textColor="@color/primary_green"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/iv_login_logo"
                app:layout_constraintStart_toStartOf="@+id/iv_login_logo"
                app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

            <TextView
                android:id="@+id/tv_login_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                app:layout_constraintEnd_toEndOf="@+id/tv_login_greeting"
                app:layout_constraintStart_toStartOf="@+id/tv_login_greeting"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_greeting" />

            <TextView
                android:id="@+id/tv_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_message" />

            <EditText
                android:id="@+id/et_login_email"
                style="@style/EditTextStyle"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_email"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/et_login_email"
                app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

            <EditText
                android:id="@+id/et_login_password"
                style="@style/EditTextStyle"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.187"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_password"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/et_login_password"
                app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/ButtonStyle"
                android:layout_marginTop="64dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/primary_green"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/ButtonStyle"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_with_stroke"
                android:text="@string/sign_up"
                android:textColor="@color/primary_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_ripple"
        android:alpha="0">
        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>